Bug 760038 - crash in NotificationController::WillRefresh, r=tbsaunde